--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ _mailinglist
 .idea/
 docs/_build/
 __pycache__
+config.py
+!env_file.example
+examples/
+app/
 
 # Coverage reports
 htmlcov/
@@ -26,3 +30,6 @@ htmlcov/
 # Direnv
 .envrc
 .direnv
+
+# Virtual env
+venv/
